--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
+body, html {
+    margin: 0px;
+    width: 100%;
+    height: 100%;
 }
 
-html, body {
-    overflow: hidden;
-}
-
-#canvas {
+#window {
+    width: 100%;
+    height: 100%;
     position: fixed;
-    top: 0;
-    left: 0;
-    outline: 0;
 }
-
